Template Variables for Virtual PackResources (#1)
* Template Variables

* Updated Virtual DataPack Files

* ComponentType enum is now JSON Serializable

* More Template Variables work & OreVariant as enum

* Cutout ore block rendering

* Tag Template virtual generation