@@ -1,21 +1,30 @@
 package net.davoleo.mettle.data;
 
 import com.google.common.base.Joiner;
+import com.google.gson.Gson;
+import com.google.gson.reflect.TypeToken;
+import com.google.gson.stream.JsonReader;
 import net.davoleo.mettle.Mettle;
-import net.davoleo.mettle.init.ModRegistry;
+import net.davoleo.mettle.api.metal.ComponentType;
+import net.davoleo.mettle.data.template.ITemplateResource;
+import net.davoleo.mettle.data.template.VirtualResourceProviders;
 import net.minecraft.MethodsReturnNonnullByDefault;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.server.packs.AbstractPackResources;
 import net.minecraft.server.packs.PackType;
 import net.minecraft.server.packs.ResourcePackFileNotFoundException;
 import net.minecraft.server.packs.metadata.MetadataSectionSerializer;
+import org.apache.commons.lang3.tuple.Pair;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.io.*;
+import java.lang.reflect.Type;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.*;
+import java.util.Collection;
+import java.util.Map;
+import java.util.Set;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -25,6 +34,9 @@ public class VirtualPackResources extends AbstractPackResources {
 
     private Path source;
 
+    private final Map<String, ComponentType> resourceConditions;
+    private final Map<String, ITemplateResource> compiledToTemplates;
+
     public VirtualPackResources() {
         super(new File("AWOWA"));
         this.source = Mettle.platformUtils.getResourcesPath().resolve("virtual");
@@ -32,16 +44,32 @@ public class VirtualPackResources extends AbstractPackResources {
             String newPath = source.toString().replace(Mettle.platformUtils.getModLoader().toString(), "common");
             this.source = Path.of(newPath);
         }
-        System.out.println("VIRTUAL PACK source:" +  source);
+
+
+        try (var files = Files.walk(source);
+             JsonReader conditionsReader = new JsonReader(new InputStreamReader(getRootResource("conditions.json")))
+        ) {
+            Type type = new TypeToken<Map<String, ComponentType>>(){}.getType();
+            resourceConditions = new Gson().fromJson(conditionsReader, type);
+
+            compiledToTemplates = files
+                    .map(source::relativize)
+                    .filter(path -> path.toString().endsWith(".template.json"))
+                    .map(path -> Joiner.on("/").join(path))
+                    .flatMap(templatePath -> {
+                        Stream.Builder<Pair<String, ITemplateResource>> stream = Stream.builder();
+                        VirtualResourceProviders.generateTemplateResources(stream, templatePath, resourceConditions.get(templatePath));
+                        return stream.build();
+                    })
+                    .collect(Collectors.toMap(Pair::getLeft, Pair::getRight));
+        }
+        catch (IOException e) {
+            throw new RuntimeException(e);
+        }
+
+        VirtualResourceProviders.tagMembers(compiledToTemplates);
     }
 
-    private Optional<String> getMetalNameFromResource(String resourceName) {
-
-        // / or \ or _ or .
-        return Arrays.stream(resourceName.split("[\\\\/_.]"))
-                .filter(ModRegistry.METALS::has)
-                .findAny();
-    }
 
     @NotNull
     @Override
@@ -54,66 +82,33 @@ public class VirtualPackResources extends AbstractPackResources {
 
     @Override
     protected InputStream getResource(String resourcePath) throws IOException {
-        //System.out.println("getResource(" + resourcePath + ")");
 
-        var metalName = getMetalNameFromResource(resourcePath);
-        if (metalName.isEmpty())
+        ITemplateResource template = compiledToTemplates.get(resourcePath);
+
+        if (template == null)
             throw new ResourcePackFileNotFoundException(new File("METTLE_VIRTUAL_PACK"), resourcePath);
-
-        String templatePath = resourcePath
-                .replace(metalName.get(), "§metal§")
-                .replace(".json", ".template.json");
-        var templateString = Files.readString(source.resolve(templatePath));
-        templateString = templateString.replaceAll("§metal§", metalName.get());
-        return new ByteArrayInputStream(templateString.getBytes());
+        return template.getResource(source);
     }
 
     @Override
     protected boolean hasResource(String resourcePath) {
         //System.out.println("hasResource(" + resourcePath + ")");
-
-        var metalName = getMetalNameFromResource(resourcePath);
-        if (metalName.isEmpty())
-            return false;
-
-        String templatePath = resourcePath
-                .replace(metalName.get(), "§metal§")
-                .replace(".json", ".template.json");
-        return Files.exists(source.resolve(templatePath));
+        return compiledToTemplates.containsKey(resourcePath);
     }
 
     @Override
     public Collection<ResourceLocation> getResources(PackType type, String namespace, String pathIn, int maxDepth, Predicate<String> filter) {
         //System.out.println("getResources(" + type + " " + namespace + " " + pathIn + ")");
-        Path packRoot = source.resolve(type.getDirectory()).resolve(namespace);
-        Path input = packRoot.getFileSystem().getPath(pathIn);
+        String root = type.getDirectory() + '/' + namespace + '/';
+        String entirePath = root + pathIn + '/';
 
-        try (var files = Files.walk(packRoot)) {
-            return files
-                    .map(packRoot::relativize)
-                    .filter(path -> path.getNameCount() <= maxDepth && !path.toString().endsWith(".mcmeta") && path.startsWith(input))
-                    .filter(path -> filter.test(path.toString()))
-                    .map(path -> Joiner.on("/").join(path))
-                    .flatMap(path -> {
-                        Stream.Builder<String> resources = Stream.builder();
-                        ModRegistry.METALS.forEach((name, metal) -> {
-                            //TODO: dynamic blacklist check
-                            if (metal.mod().equals("minecraft"))
-                                return;
-
-                            String replaced = path
-                                    .replace("§metal§", name)
-                                    .replace(".template", "");
-                            resources.add(replaced);
-                        });
-                        return resources.build();
-                    })
-                    .map(path -> new ResourceLocation(namespace, path))
-                    .collect(Collectors.toList());
-        }
-        catch (IOException e) {
-            return Collections.emptyList();
-        }
+        return compiledToTemplates
+                .keySet()
+                .stream()
+                .filter(path -> path.startsWith(entirePath) && (entirePath.split("/").length - 2) <= maxDepth) //TODO: maxDepth condition : Verify
+                .filter(filter)
+                .map(string -> new ResourceLocation(namespace, string.replace(root, "")))
+                .toList();
     }
 
     @Nullable
@@ -126,7 +121,7 @@ public class VirtualPackResources extends AbstractPackResources {
 
     @Override
     public Set<String> getNamespaces(PackType type) {
-        return Set.of("mettle");
+        return Set.of("mettle","minecraft");
     }
 
     @Override
